# Chhaya

./: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HOWTOUSE.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.txt  _config.yml  index.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql.yml  rust.yml
docs/: compromise-recovery.md  garlic-routing.md  how-it-works.md  index.md  threat-model.md  wire-spec.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: cookie.rs  envelope.rs  label_block.rs  resp_ok.rs
src/: directory.rs  lib.rs  pin.rs  quorum.rs  safety.rs
src/net/: mod.rs  ratelimit.rs
src/p2p/: bootstrap.rs  exchange.rs  ipfs.rs  mod.rs
src/routing/: mod.rs
src/security/: audit.rs  device.rs  mod.rs
src/vkd/: cache.rs  client.rs  gossip.rs  mod.rs  trust.rs
